--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">Louis la Sourie</div>
+        <div class="title">Louis'Lore</div>
         <div class="subtitle">🇫🇷</div>
         <div class="social-links">
             </a>
@@ -179,6 +179,8 @@
             </a>
             <a href="https://www.tiktok.com/@odioo.fr" target="_blank">
                 <img src="tiktok.png" alt="TikTok">Tiktok
+            <a href="https://www.tiktok.com/@louisnny" target="_blank">
+                <img src="tiktok.png" alt="Instagram">TikTok Sport
             </a>
         </div>
     </div>
