--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <img src="insta.png" alt="Instagram">Insta LouislaSourie
             </a>
             <a href="https://www.tiktok.com/@odioo.fr" target="_blank">
-                <img src="tiktok.png" alt="TikTok">Tiktok
+                <img src="tiktok.png" alt="TikTok">Tiktok LouislaSourie
             <a href="https://www.tiktok.com/@louisnny" target="_blank">
                 <img src="tiktok.png" alt="Instagram">TikTok Sport
             </a>
